# vtk-to-stl

./: .gitignore  CMakeLists.txt  README.md  main.cpp
